--- a/frameworks/runtime-src/proj.win32/MyGame.vcxproj
+++ b/frameworks/runtime-src/proj.win32/MyGame.vcxproj
@@ -195,6 +195,18 @@ xcopy "$(ProjectDir)..\..\..\src" "$(LocalDebuggerWorkingDirectory)\src" /D /E /
     <ClInclude Include="..\Classes\ide-support\CodeIDESupport.h" />
     <ClInclude Include="..\Classes\ide-support\lua_debugger.h" />
     <ClInclude Include="..\Classes\ide-support\RuntimeLuaImpl.h" />
+    <ClInclude Include="..\Classes\pbc\pbc-lua.h" />
+    <ClInclude Include="..\Classes\pbc\src\alloc.h" />
+    <ClInclude Include="..\Classes\pbc\src\array.h" />
+    <ClInclude Include="..\Classes\pbc\src\bootstrap.h" />
+    <ClInclude Include="..\Classes\pbc\src\context.h" />
+    <ClInclude Include="..\Classes\pbc\src\descriptor.pbc.h" />
+    <ClInclude Include="..\Classes\pbc\src\map.h" />
+    <ClInclude Include="..\Classes\pbc\src\pattern.h" />
+    <ClInclude Include="..\Classes\pbc\src\pbc.h" />
+    <ClInclude Include="..\Classes\pbc\src\proto.h" />
+    <ClInclude Include="..\Classes\pbc\src\stringpool.h" />
+    <ClInclude Include="..\Classes\pbc\src\varint.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SimulatorWin.h" />
@@ -205,6 +217,20 @@ xcopy "$(ProjectDir)..\..\..\src" "$(LocalDebuggerWorkingDirectory)\src" /D /E /
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\ide-support\lua_debugger.c" />
     <ClCompile Include="..\Classes\ide-support\RuntimeLuaImpl.cpp" />
+    <ClCompile Include="..\Classes\pbc\pbc-lua.c" />
+    <ClCompile Include="..\Classes\pbc\src\alloc.c" />
+    <ClCompile Include="..\Classes\pbc\src\array.c" />
+    <ClCompile Include="..\Classes\pbc\src\bootstrap.c" />
+    <ClCompile Include="..\Classes\pbc\src\context.c" />
+    <ClCompile Include="..\Classes\pbc\src\decode.c" />
+    <ClCompile Include="..\Classes\pbc\src\map.c" />
+    <ClCompile Include="..\Classes\pbc\src\pattern.c" />
+    <ClCompile Include="..\Classes\pbc\src\proto.c" />
+    <ClCompile Include="..\Classes\pbc\src\register.c" />
+    <ClCompile Include="..\Classes\pbc\src\rmessage.c" />
+    <ClCompile Include="..\Classes\pbc\src\stringpool.c" />
+    <ClCompile Include="..\Classes\pbc\src\varint.c" />
+    <ClCompile Include="..\Classes\pbc\src\wmessage.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SimulatorWin.cpp" />
     <ClCompile Include="stdafx.cpp" />
