--- a/frameworks/runtime-src/proj.win32/MyGame.vcxproj.filters
+++ b/frameworks/runtime-src/proj.win32/MyGame.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="resource">
       <UniqueIdentifier>{2d1d0979-58cd-4ab6-b91c-13650158f1fa}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes\pbc">
+      <UniqueIdentifier>{e8d60bef-334b-491c-8df9-029d5375021c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h">
@@ -35,6 +38,42 @@
     <ClInclude Include="..\Classes\ide-support\RuntimeLuaImpl.h">
       <Filter>Classes</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\alloc.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\array.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\bootstrap.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\context.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\descriptor.pbc.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\map.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\pattern.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\pbc.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\pbc-lua.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\proto.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\stringpool.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\pbc\src\varint.h">
+      <Filter>Classes\pbc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp">
@@ -52,6 +91,48 @@
     </ClCompile>
     <ClCompile Include="..\Classes\ide-support\RuntimeLuaImpl.cpp">
       <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\alloc.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\array.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\bootstrap.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\context.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\decode.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\map.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\pattern.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\pbc-lua.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\proto.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\register.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\rmessage.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\stringpool.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\varint.c">
+      <Filter>Classes\pbc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\pbc\src\wmessage.c">
+      <Filter>Classes\pbc</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
